unit_tests/preprocessor/errors/undef-file-twice.correct
preprocessor/errors/undef-file-twice:2: warning: undefining "__FILE__"
